--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
 <button
     class="btn btn-primary"
-    (click)="onLoadServers()"
+    (click)="onLoadServer(1)"
 >
-    Load Servers
+    Load Server 1
 </button>
