--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,9 +2,11 @@
     <div class="col-xs-12 col-sm-4">
         <div class="list-group">
             <a
-                href="#"
                 class="list-group-item"
                 *ngFor="let server of servers"
+                [routerLink]="['/servers', server.id, 'edit']"
+                [queryParams]="{allowEdit: 1}"
+                fragment="loading"
             >
                 {{ server.name }}
             </a>
