feat: Code cleanups (route adjustments).

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,7 +4,7 @@
             <a
                 class="list-group-item"
                 *ngFor="let server of servers"
-                [routerLink]="['/servers', server.id, 'edit']"
+                [routerLink]="['/servers', server.id]"
                 [queryParams]="{allowEdit: 1}"
                 fragment="loading"
             >
@@ -22,6 +22,6 @@
         </button>
         <app-edit-server></app-edit-server>
         <hr>
-        <app-server></app-server>
+        <!-- <app-server></app-server> -->
     </div>
 </div>
