--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,7 +2,8 @@
     <div class="col-xs-12 col-sm-4">
         <div class="list-group">
             <a
-                href="#" class="list-group-item"
+                [routerLink]="['/users', user.id, user.name]"
+                class="list-group-item"
                 *ngFor="let user of users"
             >
                 {{ user.name }}
