--- a/src/app/servers/edit-server/edit-server.component.html
+++ b/src/app/servers/edit-server/edit-server.component.html
@@ -1,23 +1,29 @@
-<div class="form-group">
-    <label for="name">Server Name</label>
-    <input
-        type="text"
-        id="name"
-        class="form-control"
-        [(ngModel)]="serverName"
-    />
-</div>
+<h4 *ngIf="allowEdit === false">You are not allowed to edit this server!</h4>
 
-<div class="form-group">
-    <label for="status">Server Status</label>
-    <select
-        id="status"
-        class="form-control"
-        [(ngModel)]="serverStatus"
-    >
-        <option value="online">Online</option>
-        <option value="offline">Offline</option>
-    </select>
-</div>
+<div *ngIf="allowEdit === true">
+    <div class="form-group">
+        <label for="name">Server Name</label>
+        <input
+            type="text"
+            id="name"
+            class="form-control"
+            [(ngModel)]="serverName"
+        />
+    </div>
 
-<button class="btn btn-primary" (click)="onUpdateServer()">Update Server</button>
+    <div class="form-group">
+        <label for="status">Server Status</label>
+        <select
+            id="status"
+            class="form-control"
+            [(ngModel)]="serverStatus"
+        >
+            <option value="online">Online</option>
+            <option value="offline">Offline</option>
+        </select>
+    </div>
+
+    <button class="btn btn-primary" (click)="onUpdateServer()">Update Server</button>
+
+
+</div>
