--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
                             id="username"
                             class="form-control"
                             ngModel
+                            required
                         />
                     </div>
 
@@ -29,6 +30,8 @@
                             id="email"
                             class="form-control"
                             ngModel
+                            required
+                            email
                         />
                     </div>
                 </div>
@@ -39,6 +42,7 @@
                         id="secret"
                         class="form-control"
                         ngModel
+                        required
                     >
                         <option value="pet">Your first Pet?</option>
                         <option value="teacher">Your first teacher?</option>
