--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,7 @@
                 <button
                     class="btn btn-primary"
                     type="submit"
+                    [disabled]="!userForm.form.valid"
                 >
                     Submit
                 </button>
