--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,14 @@
                             ngModel
                             required
                             email
+                            #email="ngModel"
                         />
+                        <span
+                            *ngIf="email.invalid && email.touched"
+                            class="help-block"
+                        >
+                            Please enter a valid email.
+                        </span>
                     </div>
                 </div>
                 <div class="form-group">
