feat: Set default values with ngModel's property binding.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
                         name="secret"
                         id="secret"
                         class="form-control"
-                        ngModel
+                        [ngModel]="'pet'"
                         required
                     >
                         <option value="pet">Your first Pet?</option>
