--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,7 @@
                     <button
                         class="btn btn-default"
                         type="button"
+                        (click)="suggestUserName()"
                     >
                         Suggest an Username
                     </button>
