--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,4 +109,15 @@
             </form>
         </div>
     </div>
+    <hr />
+    <div class="row" *ngIf="submitted">
+        <div class="col-xs-12">
+            <h3>Your Data</h3>
+            <p>Username: {{ user.username }}</p>
+            <p>Email: {{ user.email }}</p>
+            <p>Gender: {{ user.gender }}</p>
+            <p>Secret Question: {{ user.secretQuestion }}</p>
+            <p>Secret Answer: {{ user.secretAnswer }}</p>
+        </div>
+    </div>
 </div>
