--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,69 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-            <form>
-                <div id="user-data">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" id="username" class="form-control">
-                    </div>
-                    <button class="btn btn-default" type="button">Suggest an Username</button>
-                    <div class="form-group">
-                        <label for="email">Mail</label>
-                        <input type="email" id="email" class="form-control">
-                    </div>
+            <form
+                #form="ngForm"
+                (ngSubmit)="onFormSubmit()"
+            >
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input
+                        type="email"
+                        name="email"
+                        id="email"
+                        class="form-control"
+                        ngModel
+                        #email="ngModel"
+                        required
+                        email
+                    />
+                    <span
+                        *ngIf="email.invalid && email.touched"
+                        class="help-block"
+                    >
+                        Please enter a valid email.
+                    </span>
                 </div>
                 <div class="form-group">
-                    <label for="secret">Secret Questions</label>
-                    <select id="secret" class="form-control">
-                        <option value="pet">Your first Pet?</option>
-                        <option value="teacher">Your first teacher?</option>
+                    <label for="subscription">Subscription</label>
+                    <select
+                        name="subscription"
+                        id="subscription"
+                        class="form-control"
+                        [ngModel]="'Advanced'"
+                    >
+                        <option
+                            *ngFor="let subscription of ['Basic', 'Advanced', 'Pro']"
+                            [value]="subscription"
+                        >
+                            {{ subscription }}
+                        </option>
                     </select>
                 </div>
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input
+                        type="password"
+                        name="password"
+                        id="password"
+                        class="form-control"
+                        ngModel
+                        #password="ngModel"
+                        required
+                    />
+                    <span
+                        *ngIf="password.invalid && password.touched"
+                        class="help-block"
+                    >
+                        Please enter a password.
+                    </span>
+                </div>
+                <button
+                    type="submit"
+                    class="btn btn-primary"
+                >
+                    Submit
+                </button>
             </form>
         </div>
     </div>
