--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-            <form>
+            <form
+                [formGroup]="signupForm"
+            >
                 <div class="form-group">
                     <label
                         for="username"
@@ -10,8 +12,10 @@
                     </label>
                     <input
                         type="text"
+                        name="username"
                         id="username"
                         class="form-control"
+                        formControlName="username"
                     />
                 </div>
                 <div class="form-group">
@@ -22,8 +26,10 @@
                     </label>
                     <input
                         type="text"
+                        name="email"
                         id="email"
                         class="form-control"
+                        formControlName="email"
                     />
                 </div>
                 <div
@@ -33,7 +39,9 @@
                     <label>
                         <input
                             type="radio"
+                            name="gender"
                             [value]="gender"
+                            formControlName="gender"
                         />{{ gender }}
                     </label>
                 </div>
