--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,65 +5,67 @@
                 [formGroup]="signupForm"
                 (ngSubmit)="onSubmit()"
             >
-                <div class="form-group">
-                    <label
-                        for="username"
-                    >
-                        Username
-                    </label>
-                    <input
-                        type="text"
-                        name="username"
-                        id="username"
-                        class="form-control"
-                        formControlName="username"
-                    />
-                </div>
-                <span
-                    *ngIf="signupForm.get('username')?.invalid && signupForm.get('username')?.touched"
-                    class="help-block"
-                >
-                    Please enter a username.
-                </span>
-                <div class="form-group">
-                    <label
-                        for="email"
-                    >
-                        Email
-                    </label>
-                    <input
-                        type="text"
-                        name="email"
-                        id="email"
-                        class="form-control"
-                        formControlName="email"
-                    />
-                </div>
-                <span
-                    *ngIf="signupForm.get('email')?.invalid && signupForm.get('email')?.touched"
-                    class="help-block"
-                >
-                    Please enter a valid email.
-                </span>
-                <div
-                    class="radio"
-                    *ngFor="let gender of genders;"
-                >
-                    <label>
+                <div formGroupName="userData">
+                    <div class="form-group">
+                        <label
+                            for="username"
+                        >
+                            Username
+                        </label>
                         <input
-                            type="radio"
-                            name="gender"
-                            [value]="gender"
-                            formControlName="gender"
-                        />{{ gender }}
-                    </label>
+                            type="text"
+                            name="username"
+                            id="username"
+                            class="form-control"
+                            formControlName="username"
+                        />
+                    </div>
+                    <span
+                        *ngIf="signupForm.get('userData.username')?.invalid && signupForm.get('userData.username')?.touched"
+                        class="help-block"
+                    >
+                        Please enter a username.
+                    </span>
+                    <div class="form-group">
+                        <label
+                            for="email"
+                        >
+                            Email
+                        </label>
+                        <input
+                            type="text"
+                            name="email"
+                            id="email"
+                            class="form-control"
+                            formControlName="email"
+                        />
+                    </div>
+                    <span
+                        *ngIf="signupForm.get('userData.email')?.invalid && signupForm.get('userData.email')?.touched"
+                        class="help-block"
+                    >
+                        Please enter a valid email.
+                    </span>
+                    <div
+                        class="radio"
+                        *ngFor="let gender of genders;"
+                    >
+                        <label>
+                            <input
+                                type="radio"
+                                name="gender"
+                                [value]="gender"
+                                formControlName="gender"
+                            />{{ gender }}
+                        </label>
+                    </div>
+                    <span
+                        *ngIf="signupForm.get('userData.gender')?.invalid && signupForm.get('userData.gender')?.touched"
+                        class="help-block"
+                    >
+                        Please select a gender.
+                    </span>
                 </div>
-                <span
-                    *ngIf="signupForm.get('gender')?.invalid && signupForm.get('gender')?.touched"
-                    class="help-block"
-                >
-                    Please select a gender.
-                </span>
                 <button
                     type="submit"
                     class="btn btn-primary"
