--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,12 +20,21 @@
                             formControlName="username"
                         />
                     </div>
-                    <span
+                    <div
                         *ngIf="signupForm.get('userData.username')?.invalid && signupForm.get('userData.username')?.touched"
                         class="help-block"
                     >
-                        Please enter a username.
-                    </span>
+                        <span
+                            *ngIf="signupForm.get('userData.username')?.errors?.['required']"
+                        >
+                            Please enter a username.
+                        </span>
+                        <span
+                            *ngIf="signupForm.get('userData.username')?.errors?.['nameIsForbidden']"
+                        >
+                            This username is not available.
+                        </span>
+                    </div>
                     <div class="form-group">
                         <label
                             for="email"
