feat: Initial commit.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
 .container {
     margin-top: 30px;
-  }
+}
+
+.ng-touched.ng-invalid:not(form):not([formgroupname]) {
+    border: 1px solid red;
+}
