--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,14 @@
                 class="form-control"
                 [(ngModel)]="filteredStatus"
             />
+            <br />
+            <button
+                type="button"
+                class="btn btn-primary"
+                (click)="onAddServer()"
+            >
+                Add Server
+            </button>
             <hr />
             <ul class="list-group">
                 <li
