--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
             >
                 Add Server
             </button>
+            <h2>
+                App Status: {{ appStatus | async }}
+            </h2>
             <hr />
             <ul class="list-group">
                 <li
