--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3">
             <form
-                #postForm="ngForm"
-                (ngSubmit)="onCreatePost(postForm.value)"
+                [formGroup]="form"
+                (ngSubmit)="onCreatePost()"
             >
                 <div class="form-group">
                     <label for="title">Title</label>
@@ -12,8 +12,7 @@
                         name="title"
                         id="title"
                         class="form-control"
-                        ngModel
-                        required
+                        formControlName="title"
                     />
                 </div>
                 <div class="form-group">
@@ -22,14 +21,13 @@
                         name="content"
                         id="content"
                         class="form-control"
-                        ngModel
-                        required
+                        formControlName="content"
                     ></textarea>
                 </div>
                 <button
                     class="btn btn-primary"
                     type="submit"
-                    [disabled]="!postForm.valid"
+                    [disabled]="form.invalid"
                 >
                     Send Post
                 </button>
