--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,18 +53,19 @@
             </button>
         </div>
     </div>
-    <div class="row" *ngIf="loadedPosts.length > 0; else emptyPosts">
-        <app-post
-            *ngFor="let post of loadedPosts"
-            [post]="post"
-        ></app-post>
+    <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <p *ngIf="loadedPosts.length === 0">
+                No posts available!
+            </p>
+        <ul
+            class="list-group"
+            *ngIf="loadedPosts.length > 0"
+        >
+            <app-post
+                *ngFor="let post of loadedPosts"
+                [post]="post"
+            ></app-post>
+        </ul>
     </div>
-
-    <ng-template #emptyPosts>
-        <div class="row">
-            <div class="col-xs-12 col-md-6 col-md-offset-3">
-                <p>No posts available!</p>
-            </div>
-        </div>
-    </ng-template>
 </div>
