--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-md-6 col-md-offset-3">
-    <p>{{ post.title }}</p>
+<li class="list-group-item">
+    <h3>{{ post.title }}</h3>
     <p>{{ post.content }}</p>
-</div>
+</li>
