--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,17 +55,18 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3">
-            <p *ngIf="loadedPosts.length === 0">
+            <p *ngIf="loadedPosts.length === 0 && isFetchingPosts === false">
                 No posts available!
             </p>
         <ul
             class="list-group"
-            *ngIf="loadedPosts.length > 0"
+            *ngIf="loadedPosts.length > 0 && isFetchingPosts === false"
         >
             <app-post
                 *ngFor="let post of loadedPosts"
                 [post]="post"
             ></app-post>
         </ul>
+        <p *ngIf="isFetchingPosts === true">Loading...</p>
     </div>
 </div>
